force-app/main/default/objects/Account_Extension_Eazy_Collect__c/Account_Extension_Eazy_Collect__c.object-meta.xml
<CustomObject>
    <label>Account Extension - Paysuite</label>
    <nameField>
        <displayFormat>Paysuite-{000000}</displayFormat>
        <label>Account Extension - Paysuite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Extensions - Eazy Collect</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>