force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Account_c__c.field-meta.xml
<CustomField>
    <fullName>Account_c__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Extensions_Eazy_Collect</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>