force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/ANL_Requirements__c.field-meta.xml
<CustomField>
    <fullName>ANL_Requirements__c</fullName>
    <label>ANL Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EZ Letterhead</fullName>
            </value>
            <value>
                <fullName>OWN Letterhead</fullName>
            </value>
            <value>
                <fullName>Email ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>