force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Ave_monthly_transactions_in_last_6_month__c.field-meta.xml
<CustomField>
    <fullName>Ave_monthly_transactions_in_last_6_month__c</fullName>
    <label>Ave monthly transactions in last 6 month</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>