force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/BACS_Shortname__c.field-meta.xml
<CustomField>
    <fullName>BACS_Shortname__c</fullName>
    <label>BACS Shortname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>