force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Client_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Live_Date__c</fullName>
    <label>Client Live Date</label>
    <type>Date</type>
</CustomField>