force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Collection_Dates__c.field-meta.xml
<CustomField>
    <fullName>Collection_Dates__c</fullName>
    <label>Collection Dates</label>
    <length>50</length>
    <type>Text</type>
</CustomField>