force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Date_TA_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_TA_Signed__c</fullName>
    <label>Date TA Signed</label>
    <type>Date</type>
</CustomField>