force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Description_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Services__c</fullName>
    <label>Description of Services</label>
    <length>200</length>
    <type>Text</type>
</CustomField>