force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Disable_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Disable_Invoicing__c</fullName>
    <label>Disable Invoicing</label>
    <type>Date</type>
</CustomField>