force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/EazyWeb_Link__c.field-meta.xml
<CustomField>
    <fullName>EazyWeb_Link__c</fullName>
    <label>EazyWeb Link</label>
    <type>Url</type>
</CustomField>