force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Final_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Collection_Date__c</fullName>
    <label>Final Collection Date</label>
    <type>Date</type>
</CustomField>