force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/First_Response_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Sent__c</fullName>
    <label>First Response Sent</label>
    <type>Date</type>
</CustomField>