force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/No_Access__c.field-meta.xml
<CustomField>
    <fullName>No_Access__c</fullName>
    <formula>&quot;The &apos;Account Extension - Paysuite&apos; object can only be viewed by Paysuite users.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Extension - Paysute</label>
    <type>Text</type>
</CustomField>