force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Notice_Preference__c.field-meta.xml
<CustomField>
    <fullName>Notice_Preference__c</fullName>
    <label>Notice Preference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>