force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Optional_Services__c.field-meta.xml
<CustomField>
    <fullName>Optional_Services__c</fullName>
    <label>Optional Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>API, Bank Checker</fullName>
                <isActive>false</isActive>
                <label>API, Bank Checker</label>
            </value>
            <value>
                <fullName>API, Bank Checker, Own Web Integration</fullName>
                <isActive>false</isActive>
                <label>API, Bank Checker, Own Web Integration</label>
            </value>
            <value>
                <fullName>API, EazyWeb</fullName>
                <isActive>false</isActive>
                <label>API, EazyWeb</label>
            </value>
            <value>
                <fullName>API, Mobile App, Own Web Integration</fullName>
                <isActive>false</isActive>
                <label>API, Mobile App, Own Web Integration</label>
            </value>
            <value>
                <fullName>API, Own Web Integration</fullName>
                <isActive>false</isActive>
                <label>API, Own Web Integration</label>
            </value>
            <value>
                <fullName>Bank Checker</fullName>
            </value>
            <value>
                <fullName>Card Processing</fullName>
            </value>
            <value>
                <fullName>Communicate</fullName>
            </value>
            <value>
                <fullName>EazyWeb</fullName>
            </value>
            <value>
                <fullName>EazyWeb, Mobile App</fullName>
                <isActive>false</isActive>
                <label>EazyWeb, Mobile App</label>
            </value>
            <value>
                <fullName>eDD</fullName>
            </value>
            <value>
                <fullName>Faster Payment Disbursal</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Own Web Integration</fullName>
            </value>
            <value>
                <fullName>Own Web Integration, File Upload</fullName>
                <isActive>false</isActive>
                <label>Own Web Integration, File Upload</label>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
            <value>
                <fullName>Xero Integration</fullName>
                <isActive>false</isActive>
                <label>Xero Integration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>