force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Client</label>
            </value>
            <value>
                <fullName>Given Notice</fullName>
            </value>
            <value>
                <fullName>Past Client</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <isActive>false</isActive>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>EazyDD Client</fullName>
                <isActive>false</isActive>
                <label>EazyDD Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>