force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Personal_Guarantee_Received__c.field-meta.xml
<CustomField>
    <fullName>Personal_Guarantee_Received__c</fullName>
    <label>Personal Guarantee Received</label>
    <type>Date</type>
</CustomField>