force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Personal_Guarantee_Sent__c.field-meta.xml
<CustomField>
    <fullName>Personal_Guarantee_Sent__c</fullName>
    <label>Personal Guarantee Sent</label>
    <type>Date</type>
</CustomField>