force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Reason_Left__c.field-meta.xml
<CustomField>
    <fullName>Reason_Left__c</fullName>
    <label>Reason Left</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Ceased Trading</fullName>
            </value>
            <value>
                <fullName>Business Model Changed</fullName>
            </value>
            <value>
                <fullName>DD not appropriate</fullName>
            </value>
            <value>
                <fullName>DD transaction limit issues</fullName>
            </value>
            <value>
                <fullName>Eazy Collect Terminated - Risk Control</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>No reason given</fullName>
            </value>
            <value>
                <fullName>System Shortfalls</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Unhappy with service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>