force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Registered_City__c.field-meta.xml
<CustomField>
    <fullName>Registered_City__c</fullName>
    <label>Registered City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>