force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Reserve_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Refund_Date__c</fullName>
    <label>Reserve Refund Date</label>
    <type>Date</type>
</CustomField>