force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Scribblemail__c.field-meta.xml
<CustomField>
    <fullName>Scribblemail__c</fullName>
    <label>Scribblemail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>