force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Send_SUN_Request_to_Bank__c.field-meta.xml
<CustomField>
    <fullName>Send_SUN_Request_to_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SUN Request to Bank?</label>
    <type>Checkbox</type>
</CustomField>