force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Service_Supplied__c.field-meta.xml
<CustomField>
    <fullName>Service_Supplied__c</fullName>
    <label>Service Supplied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accelerate</fullName>
            </value>
            <value>
                <fullName>BACS Credit</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Eazy Corporate</fullName>
            </value>
            <value>
                <fullName>EazyDD</fullName>
            </value>
            <value>
                <fullName>Eazy Enterprise</fullName>
            </value>
            <value>
                <fullName>Eazy Flat-rate</fullName>
            </value>
            <value>
                <fullName>Eazy Managed</fullName>
            </value>
            <value>
                <fullName>EDDI</fullName>
            </value>
            <value>
                <fullName>Evolve</fullName>
            </value>
            <value>
                <fullName>Ignite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>