force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Sign_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_up_Date__c</fullName>
    <label>Sign-up Date</label>
    <type>Date</type>
</CustomField>