force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/Sub_MID__c.field-meta.xml
<CustomField>
    <fullName>Sub_MID__c</fullName>
    <label>Sub-MID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>