force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/SUN_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>SUN_Live_Date__c</fullName>
    <label>SUN Live Date</label>
    <type>Date</type>
</CustomField>