force-app/main/default/objects/Account_Extension_Eazy_Collect__c/fields/SUN_Number_Assigned__c.field-meta.xml
<CustomField>
    <fullName>SUN_Number_Assigned__c</fullName>
    <label>SUN Number Assigned</label>
    <length>6</length>
    <type>Text</type>
</CustomField>